--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 REACT_APP_OPEN_WEATHER_KEY=1effb3fc1ae9270128e82aa0e7c69361
+REACT_APP_API_KEY=AIzaSyD6GclPNWBOS0ywBuYzH2WDZLDrUZwPUGA
+REACT_APP_AUTH_DOMAIN=  weather-http-1de71.firebaseapp.com
+REACT_APP_PROJECT_ID=weather-http-1de71
+REACT_APP_STORAGE_BUCKET=weather-http-1de71.appspot.com
+REACT_APP_MESSAGING_SENDER_ID=985984382409
+REACT_APP_APPID=1:985984382409:web:025a045cee23b7632da418
